@@ -1,15 +1,17 @@
 package beSoft.tn.SchedulerProject.services;
 
 import beSoft.tn.SchedulerProject.Mapper.AppUserMapper;
-import beSoft.tn.SchedulerProject.dto.AppUserDto;
-import beSoft.tn.SchedulerProject.dto.ProjectDto;
-import beSoft.tn.SchedulerProject.dto.RecentDto;
-import beSoft.tn.SchedulerProject.model.AppUser;
-import beSoft.tn.SchedulerProject.model.Project;
-import beSoft.tn.SchedulerProject.model.Recent;
+import beSoft.tn.SchedulerProject.Mapper.AppUserProjectMapper;
+import beSoft.tn.SchedulerProject.Mapper.ProjectMapper;
+import beSoft.tn.SchedulerProject.Mapper.TaskMapper;
+import beSoft.tn.SchedulerProject.dto.*;
+import beSoft.tn.SchedulerProject.model.*;
+import beSoft.tn.SchedulerProject.repository.AppUserProjectRepository;
 import beSoft.tn.SchedulerProject.repository.AppUserRepository;
+import beSoft.tn.SchedulerProject.repository.TaskRepository;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.catalina.User;
+import org.mapstruct.Mapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -23,6 +25,25 @@ import java.util.stream.Collectors;
 public class AppUserService {
 
     private final AppUserRepository appUserRepository;
+    @Autowired
+    AppUserMapper appUserMapper;
+    @Autowired
+    AppUserProjectService appUserProjectService;
+
+    @Autowired
+    TaskRepository taskRepository;
+
+    @Autowired
+    TaskMapper taskMapper;
+
+    @Autowired
+    AppUserProjectRepository appUserProjectRepository;
+
+    @Autowired
+    ProjectMapper projectMapper;
+
+    @Autowired
+    AppUserProjectMapper appUserProjectMapper;
 
     @Autowired
     public AppUserService(AppUserRepository appUserRepository) {
@@ -31,35 +52,40 @@ public class AppUserService {
 
     public List<AppUserDto> findAllAppUsers() {
         List<AppUser> list = appUserRepository.findAll();
-        return list.stream().map(AppUserMapper.INSTANCE::appUserToAppUserDto).collect(Collectors.toList());
+        return list.stream().map(appUserMapper::appUserToAppUserDto).collect(Collectors.toList());
     }
 
     public AppUserDto findAppUserById(Integer id) {
         Optional<AppUser> optionalAppUser = appUserRepository.findById(id);
-        return optionalAppUser.map(AppUserMapper.INSTANCE::appUserToAppUserDto).orElse(null);
+        return optionalAppUser.map(appUserMapper::appUserToAppUserDto).orElse(null);
     }
 
     public AppUserDto save(AppUserDto appUserDto) {
-        AppUser appUser = AppUserMapper.INSTANCE.appUserDtoToAppUser(appUserDto);
+        AppUser appUser = appUserMapper.appUserDtoToAppUser(appUserDto);
         AppUser user = appUserRepository.save(appUser);
-        return AppUserMapper.INSTANCE.appUserToAppUserDto(user);
+        return appUserMapper.appUserToAppUserDto(user);
     }
 
-    public List<ProjectDto> getProjectsByUserId(Integer userId) {
-        AppUser user = appUserRepository.findById(userId).orElse(null);
-        if(user == null || user.getProjects().isEmpty()) {
-            return Collections.emptyList();
-        }
-        List<Project> projects = user.getProjects();
-        return projects.stream().map(AppUserMapper.INSTANCE::projectToProjectDto).collect(Collectors.toList());
+    public List<TaskDto> findAllTasks(Integer userId) {
+        List<Task> tasks = taskRepository.findAllByUserId(userId);
+        return tasks.stream().map(taskMapper::taskToTaskDto).toList();
     }
 
-    public List<RecentDto> getRecentsByUserId(Integer userId) {
-        AppUser user = appUserRepository.findById(userId).orElse(null);
-        if(user == null || user.getRecents().isEmpty()) {
-            return Collections.emptyList();
-        }
-        List<Recent> recents = user.getRecents();
-        return recents.stream().map(AppUserMapper.INSTANCE::recentToRecentDto).collect(Collectors.toList());
+    public List<AppUserProjectDto> findAllAppUserProjects(Integer userId) {
+        List<AppUserProject> appUserProjectList=appUserProjectRepository.findByUserId(userId);
+        return appUserProjectList.stream().map(appUserProjectMapper::appUserProjectToAppUserProjectDto).collect(Collectors.toList());
+    }
+
+    public List<ProjectDto> findAllProjects(Integer userId) {
+        List<AppUserProjectDto> appUserProjectDtoList=findAllAppUserProjects(userId);
+        return appUserProjectDtoList.stream().map(AppUserProjectDto::getProject).collect(Collectors.toList());
+    }
+
+
+    public AppUserDto updateAppUser(Integer userId, AppUserDto appUserDto) {
+        appUserDto.setId(userId);
+        AppUser appUser = appUserMapper.appUserDtoToAppUser(appUserDto);
+        AppUser user = appUserRepository.save(appUser);
+        return appUserMapper.appUserToAppUserDto(user);
     }
 }
